# LinuxShip

./: AbstractAlgorithm.h  AbstractStowageAlgorithm.h  AlgoTravelPair.cpp  AlgoTravelPair.h  CMakeLists.txt  CargoOperation.cpp  CargoOperation.h  Container.cpp  Container.h  FileHandler.cpp  FileHandler.h  IncorrectAlgorithm.cpp  IncorrectAlgorithm.h  MapIndex.cpp  MapIndex.h  MoreNaiveAlgorithm.cpp  MoreNaiveAlgorithm.h  NaiveStowageAlgorithm.cpp  NaiveStowageAlgorithm.h  Ship.cpp  Ship.h  ShipMap.cpp  ShipMap.h  Simulator.cpp  Simulator.h  SimulatorAlgoCheck.cpp  SimulatorAlgoCheck.h  SimulatorError.cpp  SimulatorError.h  Travel.cpp  Travel.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h  bonus.txt  main.cpp  makefile  readme.txt  students.txt
Travels-Example/Travel1-example/: AA AAA_1.cargo_data  AAAAA_1.cargo_data  BB BBB_1.cargo_data  BBBBB_1.cargo_data  route  shipPlan
Travels-Example/Travel2/: AAAAA_1.cargo_data  BBBBB_1.cargo_data
Travels-Example/Travel2-example/: AA AAA_1.cargo_data  AAAAA_1.cargo_data  BB BBB_1.cargo_data  route  shipPlan
Travels/Travel1/: AA AAA_1.cargo_data  AAAAA_1.cargo_data  BB BBB_1.cargo_data  route.txt
Travels/Travel2/: AA AAA_1.cargo_data  AAAAA_1.cargo_data  route.txt  sh.ship_plan  shipPlan.txt
Travels/TravelMove/: AAAAA_1.cargo_data  BBBBB_1.cargo_data
Travels/biggest/: AAAAA_1.cargo_data  AAAAA_2.cargo_data  BBBBB_1.cargo_data  BBBBB_2.cargo_data  CCCCC_1.cargo_data  EEEEEE_1.cargo_data  route_file.route  ship_plan.ship_plan
algorithm/: AbstractCommonAlgorithm.cpp  AbstractCommonAlgorithm.h  IncorrectAlgorithm.h  _316294636_a.cpp  _316294636_a.h  _316294636_b.cpp  _316294636_b.h  makefile
algorithms/: AbstractCommonAlgorithm.cpp  AbstractCommonAlgorithm.h  IncorrectAlgorithm.cpp  IncorrectAlgorithm.h  MoreNaiveAlgorithm.cpp  MoreNaiveAlgorithm.h  NaiveStowageAlgorithm.cpp  NaiveStowageAlgorithm.h  _316294636_a.cpp  _316294636_a.h  _316294636_b.cpp  _316294636_b.h  makefile  makefile-with-all
bonus-algorithm/: IncorrectAlgorithm.cpp  IncorrectAlgorithm.h  makefile
common/: CargoOperation.cpp  CargoOperation.h  Container.cpp  Container.h  FileHandler.cpp  FileHandler.h  MapIndex.cpp  MapIndex.h  ShipMap.cpp  ShipMap.h  WeightBalanceCalculator.cpp
interfaces/: AbstractAlgorithm.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  AlgorithmRegistration.cpp  Producer.cpp  Producer.h  Simulator.cpp  Simulator.h  SimulatorAlgoCheck.cpp  SimulatorAlgoCheck.h  SimulatorError.cpp  SimulatorError.h  Task.cpp  Task.h  Travel.cpp  Travel.h  WeightBalanceCalculator.cpp  main.cpp  makefile
